[workspace]
members = [
    "bin/node",
#    "bin/node-pilot",
#    "bin/node-pilot/executor",
#    "bin/node-dev",

    "runtime/jupiter",
#    "runtime/jupiter-pilot",
#    "runtime/jupiter-dev",

    "primitives",
    "primitives/io",
    "primitives/chain-extension",
#    "pallets/template",
#    "pallets/randomness-provider",
    "pallets/randomness_collect",
#    "pallets/poa",
#    "pallets/poa/rpc",
#    "pallets/poa/rpc/runtime-api",
    "rpc",
]
exclude = ["vendor/substrate"]

[profile.release]
panic = "unwind"

