[workspace]
members = [
  "bin/node",
  "bin/node-prep",
  "bin/node-prep/executor",
  "bin/node-dev",
  
  "runtime/jupiter",
  "runtime/jupiter-prep",
  "runtime/jupiter-dev",

   "primitives",
   "primitives/chain-extension",
   "pallets/randomness-provider",
   "pallets/poa",
   "pallets/poa/rpc",
   "pallets/poa/rpc/runtime-api",
   "pallets/currencies",
   "rpc",
]

[profile.release]
panic = "unwind"
