[package]
name = "pallet-contracts-ext"
version = "0.1.0"
authors = ["Jupiter <https://github.com/patractlabs/jupiter>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

sp-std = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-contracts = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
pallet-contracts-megaclite = { package = "pallet-contracts", version = "2.0.0", git = "https://github.com/patractlabs/substrate", branch = "contracts", default-features = false, optional = true }

[features]
default = ["std"]
paritytech = [ "pallet-contracts" ]
jupiter = ["pallet-contracts-megaclite"]
std = [
    "codec/std",

    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",

    "frame-support/std",
    "frame-system/std",

    "pallet-contracts/std",
    "pallet-contracts-megaclite/std",
]
