[package]
name = "pallet-randomness-provider"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://patract.io"
repository = "https://github.com/patractlabs/jupiter"
description = "FRAME provide randomness pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }

# Substrate primitives
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# Substrate pallets
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, features = ["historical"] }

[features]
default = ["std"]
std = [
  "codec/std",

  "sp-consensus-vrf/std",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",

  "frame-support/std",
  "frame-system/std",
  "pallet-babe/std",
  "pallet-session/std",
]
