[package]
name = "pallet-randomness-provider"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://patract.io"
repository = "https://github.com/patractlabs/jupiter"
description = "FRAME provide randomness pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

# Substrate primitives
sp-consensus-vrf = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-staking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }

# Substrate pallets
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-babe = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-session = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false, features = ["historical"] }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",

  "sp-consensus-vrf/std",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",

  "frame-support/std",
  "frame-system/std",
  "pallet-babe/std",
  "pallet-session/std",
]
