[package]
name = "randomness_collect"
version = "0.1.0"
authors = ["Jupiter <https://github.com/patractlabs/jupiter>"]
edition = "2021"

[dependencies]
codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-consensus-vrf = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13",default-features = false }
sp-io = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13",default-features = false }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13",default-features = false }
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13",default-features = false }
sp-application-crypto = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13",default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "hex/std",
    "lite-json/std",
    "log/std",
    "scale-info/std",

    "frame-support/std",
    "sp-consensus-vrf/std",
    "sp-consensus-babe/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-application-crypto/std",
]
